--- a/tracking.html
+++ b/tracking.html
@@ -1,239 +1,205 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Orders & Tracking | ChatPoint</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <style>
-    :root {
-      --primary: #ff4500;
-      --success: #28a745;
-      --text: #333;
-      --bg: #f8f9fa;
-      --gray: #ddd;
-    }
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body { font-family: system-ui, -apple-system, sans-serif; background: var(--bg); color: var(--text); min-height: 100vh; }
-    .container { max-width: 500px; margin: 0 auto; padding: 1rem; }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Orders & Tracking | ChatPoint</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <style>
+        :root { --primary: #ff4500; --success: #28a745; --bg: #f8f9fa; }
+        * { box-sizing: border-box; margin: 0; padding: 0; }
+        body { font-family: system-ui, -apple-system, sans-serif; background: var(--bg); min-height: 100vh; }
+        .container { max-width: 500px; margin: 0 auto; padding: 1rem; }
 
-    .header {
-      background: white; padding: 12px 16px; display: flex; align-items: center; justify-content: space-between;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 10;
-    }
-    .back-btn { font-size: 24px; cursor: pointer; }
-    .title { font-size: 18px; font-weight: bold; }
+        .header {
+            background: white; padding: 12px 16px; display: flex; align-items: center; justify-content: space-between;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 10;
+        }
+        .back-btn { font-size: 24px; cursor: pointer; }
+        .title { font-size: 18px; font-weight: bold; }
 
-    .order-card {
-      background: white; border-radius: 12px; margin: 16px 0; overflow: hidden;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
-    }
-    .order-header {
-      padding: 16px; border-bottom: 1px solid #eee;
-    }
-    .order-id { font-weight: bold; font-size: 1.1rem; }
-    .order-status {
-      font-size: 0.9rem; margin-top: 4px;
-      color: var(--primary);
-    }
-    .status-delivered { color: var(--success); }
-    .status-cancelled { color: #dc3545; }
+        .order-card { background: white; border-radius: 12px; margin: 16px 0; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.08); }
+        .order-header { padding: 16px; border-bottom: 1px solid #eee; }
+        .order-id { font-weight: bold; font-size: 1.1rem; }
+        .order-status { font-size: 0.9rem; margin-top: 4px; color: var(--primary); }
+        .status-delivered { color: var(--success); }
+        .status-cancelled { color: #dc3545; }
 
-    .track-btn {
-      width: 100%; padding: 16px; font-size: 1.1rem; font-weight: bold;
-      border: none; cursor: pointer; background: var(--primary); color: white;
-    }
-    .track-btn:disabled {
-      background: var(--gray); cursor: not-allowed; color: #666;
-    }
+        .track-btn {
+            width: 100%; padding: 16px; font-size: 1.1rem; font-weight: bold;
+            border: none; cursor: pointer; background: var(--primary); color: white;
+        }
+        .track-btn:disabled { background: #ccc; cursor: not-allowed; }
 
-    /* Tracking Section - Hidden by default */
-    .tracking-section {
-      display: none; padding: 20px; background: #f9f9f9;
-    }
-    .tracking-section.active { display: block; }
+        .tracking-section { display: none; padding: 20px; background: #f9f9f9; }
+        .tracking-section.active { display: block; }
 
-    .map-container {
-      position: relative; height: 300px; background: #e0e0e0; overflow: hidden; border-radius: 8px;
-    }
-    .map-bg { width: 100%; height: 100%; object-fit: cover; filter: brightness(0.9); }
-    .path { position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; }
-    .path-svg { width: 100%; height: 100%; }
-    .dotted-line { stroke: var(--primary); stroke-width: 4; fill: none; stroke-dasharray: 8,8; }
-    .pin { position: absolute; font-size: 32px; color: var(--primary); transform: translate(-50%, -100%); }
-    .store-pin { left: 15%; top: 70%; }
-    .customer-pin { left: 80%; top: 20%; }
-    .bike { position: absolute; font-size: 28px; color: black; transform: translate(-50%, -50%); transition: all 1s ease-in-out; z-index: 5; }
+        .map-container { position: relative; height: 300px; background: #e0e0e0; overflow: hidden; border-radius: 8px; }
+        .map-bg { width: 100%; height: 100%; object-fit: cover; filter: brightness(0.9); }
+        .path { position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; }
+        .path-svg { width: 100%; height: 100%; }
+        .dotted-line { stroke: var(--primary); stroke-width: 4; fill: none; stroke-dasharray: 8,8; }
+        .pin { position: absolute; font-size: 32px; color: var(--primary); transform: translate(-50%, -100%); }
+        .store-pin { left: 15%; top: 70%; }
+        .customer-pin { left: 80%; top: 20%; }
+        .bike { position: absolute; font-size: 28px; color: black; transform: translate(-50%, -50%); transition: all 1s ease-in-out; z-index: 5; }
 
-    .status-box { text-align: center; padding: 20px 0; }
-    .status-title { font-size: 18px; font-weight: bold; }
-    .eta { font-size: 16px; color: var(--primary); font-weight: bold; margin: 8px 0; }
+        .status-box { text-align: center; padding: 20px 0; }
+        .status-title { font-size: 18px; font-weight: bold; }
+        .eta { font-size: 16px; color: var(--primary); font-weight: bold; margin: 8px 0; }
 
-    .progress-steps {
-      display: flex; justify-content: space-between; padding: 0 20px 20px;
-    }
-    .step { text-align: center; flex: 1; }
-    .step-circle {
-      width: 40px; height: 40px; border-radius: 50%; background: var(--gray);
-      margin: 0 auto 8px; display: flex; align-items: center; justify-content: center;
-      color: white; font-weight: bold;
-    }
-    .step.active .step-circle { background: var(--primary); }
-    .step-label { font-size: 12px; color: #666; }
-    .step.active .step-label { color: var(--primary); font-weight: bold; }
+        .progress-steps { display: flex; justify-content: space-between; padding: 0 20px 20px; }
+        .step { text-align: center; flex: 1; }
+        .step-circle { width: 40px; height: 40px; border-radius: 50%; background: #ddd; margin: 0 auto 8px; display: flex; align-items: center; justify-content: center; color: white; font-weight: bold; }
+        .step.active .step-circle { background: var(--primary); }
+        .step-label { font-size: 12px; color: #666; }
+        .step.active .step-label { color: var(--primary); font-weight: bold; }
 
-    .no-orders, .no-login {
-      text-align: center; padding: 60px 20px; color: #666; font-size: 1.1rem;
-    }
-    .loader { text-align: center; padding: 40px; }
-  </style>
+        .no-login, .no-orders { text-align: center; padding: 60px 20px; color: #666; font-size: 1.1rem; }
+        .loader { text-align: center; padding: 40px; }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <div class="header">
-      <div class="back-btn" onclick="history.back()">←</div>
-      <div class="title">My Orders</div>
-      <div></div>
+    <div class="container">
+        <div class="header">
+            <div class="back-btn" onclick="history.back()">←</div>
+            <div class="title">My Orders & Tracking</div>
+            <div></div>
+        </div>
+
+        <div id="loading" class="loader">
+            <i class="fas fa-spinner fa-spin fa-3x"></i>
+            <p>Loading your orders...</p>
+        </div>
+
+        <div id="noLogin" class="no-login" style="display:none;">
+            <p>You need to login to view orders</p>
+            <p><a href="login.html" style="color:#4CAF50;font-weight:bold;">Login Now →</a></p>
+        </div>
+
+        <div id="noOrders" class="no-orders" style="display:none;">
+            <p>No orders yet</p>
+            <p>Start shopping to place your first order!</p>
+        </div>
+
+        <div id="ordersList"></div>
     </div>
 
-    <div id="loading" class="loader">
-      <i class="fas fa-spinner fa-spin fa-3x"></i>
-      <p>Loading your orders...</p>
-    </div>
+    <script>
+        const loggedUser = JSON.parse(localStorage.getItem('chatpoint_user') || 'null');
 
-    <div id="noLogin" class="no-login" style="display:none;">
-      <p>You need to login to view your orders</p>
-      <p><a href="login.html" style="color:var(--primary);font-weight:bold;">Login Now →</a></p>
-    </div>
-
-    <div id="noOrders" class="no-orders" style="display:none;">
-      <p>No orders yet</p>
-      <p>Place your first order!</p>
-    </div>
-
-    <div id="ordersList"></div>
-  </div>
-
-  <script>
-    const API_BASE = window.location.origin;
-    const loggedUser = JSON.parse(localStorage.getItem('chatpoint_user') || 'null');
-
-    if (!loggedUser) {
-      document.getElementById('loading').style.display = 'none';
-      document.getElementById('noLogin').style.display = 'block';
-    } else {
-      fetchUserOrders();
-      setInterval(fetchUserOrders, 10000);
-    }
-
-    async function fetchUserOrders() {
-      try {
-        const res = await fetch(`${API_BASE}/api/my-orders`, {
-          headers: { 'x-user-id': loggedUser._id }
-        });
-        const data = await res.json();
-
-        if (data.success && data.orders && data.orders.length > 0) {
-          renderOrders(data.orders);
+        if (!loggedUser) {
+            document.getElementById('loading').style.display = 'none';
+            document.getElementById('noLogin').style.display = 'block';
         } else {
-          showNoOrders();
+            fetchUserOrders();
+            setInterval(fetchUserOrders, 10000);
         }
-      } catch (err) {
-        console.error(err);
-        document.getElementById('loading').innerHTML = '<p>Error loading orders...</p>';
-      }
-    }
 
-    function showNoOrders() {
-      document.getElementById('loading').style.display = 'none';
-      document.getElementById('noOrders').style.display = 'block';
-    }
+        async function fetchUserOrders() {
+            try {
+                const res = await fetch("/api/my-orders", {
+                    headers: { 'x-user-id': loggedUser._id }
+                });
+                const data = await res.json();
 
-    function renderOrders(orders) {
-      document.getElementById('loading').style.display = 'none';
+                if (data.success && data.orders && data.orders.length > 0) {
+                    renderOrders(data.orders);
+                } else {
+                    document.getElementById('loading').style.display = 'none';
+                    document.getElementById('noOrders').style.display = 'block';
+                }
+            } catch (err) {
+                console.error(err);
+                document.getElementById('loading').innerHTML = '<p>Error loading orders...</p>';
+            }
+        }
 
-      const list = document.getElementById('ordersList');
-      list.innerHTML = orders.map(order => {
-        const progress = order.progress || 0;
-        const isTrackable = order.status === 'confirmed';
+        function renderOrders(orders) {
+            document.getElementById('loading').style.display = 'none';
 
-        const positions = [
-          { left: '15%', top: '70%' },
-          { left: '35%', top: '55%' },
-          { left: '55%', top: '45%' },
-          { left: '70%', top: '30%' },
-          { left: '80%', top: '20%' }
-        ];
-        const pos = positions[Math.min(progress, 4)];
+            const list = document.getElementById('ordersList');
+            list.innerHTML = orders.map(order => {
+                const progress = order.progress || 0;
+                const isTrackable = order.status === 'confirmed';
 
-        const messages = [
-          "Order confirmed - being prepared",
-          "Picked up from store",
-          "On the way",
-          "Almost there!",
-          "Delivered! Enjoy 🥳"
-        ];
-        const etas = ["~30 min", "~25 min", "~15 min", "~5 min", "Delivered"];
+                const positions = [
+                    { left: '15%', top: '70%' },
+                    { left: '35%', top: '55%' },
+                    { left: '55%', top: '45%' },
+                    { left: '70%', top: '30%' },
+                    { left: '80%', top: '20%' }
+                ];
+                const pos = positions[Math.min(progress, 4)];
 
-        let bikeIcon = '<i class="fas fa-motorcycle"></i>';
-        if (progress === 4) bikeIcon = '<i class="fas fa-check-circle" style="font-size:36px;color:#28a745;"></i>';
+                const messages = [
+                    "Order confirmed - being prepared",
+                    "Picked up from store",
+                    "On the way",
+                    "Almost there!",
+                    "Delivered! Enjoy 🥳"
+                ];
+                const etas = ["~30 min", "~25 min", "~15 min", "~5 min", "Delivered"];
 
-        let statusClass = '';
-        let statusText = order.status.charAt(0).toUpperCase() + order.status.slice(1);
-        if (order.status === 'delivered') statusClass = 'status-delivered';
-        if (order.status === 'cancelled') statusClass = 'status-cancelled';
+                let bikeIcon = '<i class="fas fa-motorcycle"></i>';
+                if (progress === 4) bikeIcon = '<i class="fas fa-check-circle" style="font-size:36px;color:#28a745;"></i>';
 
-        return `
-          <div class="order-card">
-            <div class="order-header">
-              <div class="order-id">Order #${order._id.slice(-6)}</div>
-              <div class="order-status ${statusClass}">${statusText}</div>
-            </div>
+                let statusClass = '';
+                let statusText = order.status.charAt(0).toUpperCase() + order.status.slice(1);
+                if (order.status === 'delivered') statusClass = 'status-delivered';
+                if (order.status === 'cancelled') statusClass = 'status-cancelled';
 
-            ${isTrackable || order.status === 'delivered' ? `
-            <button class="track-btn" onclick="toggleTracking(this, ${progress})" ${!isTrackable && order.status !== 'delivered' ? 'disabled' : ''}>
-              ${order.status === 'pending' ? '⏳ Waiting for confirmation' : 'Track Order'}
-            </button>
-
-            <div class="tracking-section">
-              <div class="map-container">
-                <img src="https://images.unsplash.com/photo-1569336415965-7d80c2e3ff2a?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" alt="Map" class="map-bg">
-                <div class="path">
-                  <svg class="path-svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-                    <path class="dotted-line" d="M15 70 Q 30 50, 50 45 T 80 20" />
-                  </svg>
-                </div>
-                <div class="pin store-pin"><i class="fas fa-store"></i></div>
-                <div class="pin customer-pin"><i class="fas fa-map-marker-alt"></i></div>
-                <div class="bike" style="left:${pos.left};top:${pos.top};">${bikeIcon}</div>
-              </div>
-
-              <div class="status-box">
-                <div class="status-title">${messages[progress] || 'Order confirmed'}</div>
-                <div class="eta">${etas[progress] || '~30 min'}</div>
-
-                <div class="progress-steps">
-                  ${[1,2,3,4].map(num => `
-                    <div class="step ${progress >= num ? 'active' : ''}">
-                      <div class="step-circle">${num}</div>
-                      <div class="step-label">${['Prepared','Picked','On Way','Delivered'][num-1]}</div>
+                return `
+                  <div class="order-card">
+                    <div class="order-header">
+                      <div class="order-id">Order #${order._id.slice(-6)}</div>
+                      <div class="order-status ${statusClass}">${statusText}</div>
                     </div>
-                  `).join('')}
-                </div>
-              </div>
-            </div>
-            ` : ''}
-          </div>
-        `;
-      }).join('');
-    }
 
-    function toggleTracking(btn, progress) {
-      const section = btn.nextElementSibling;
-      if (section && section.classList.contains('tracking-section')) {
-        section.classList.toggle('active');
-      }
-    }
-  </script>
+                    ${(isTrackable || order.status === 'delivered') ? `
+                    <button class="track-btn" onclick="toggleTracking(this)">
+                      ${order.status === 'pending' ? '⏳ Waiting for confirmation' : 'Track Order'}
+                    </button>
+
+                    <div class="tracking-section">
+                      <div class="map-container">
+                        <img src="https://images.unsplash.com/photo-1569336415965-7d80c2e3ff2a?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" alt="Map" class="map-bg">
+                        <div class="path">
+                          <svg class="path-svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+                            <path class="dotted-line" d="M15 70 Q 30 50, 50 45 T 80 20" />
+                          </svg>
+                        </div>
+                        <div class="pin store-pin"><i class="fas fa-store"></i></div>
+                        <div class="pin customer-pin"><i class="fas fa-map-marker-alt"></i></div>
+                        <div class="bike" style="left:${pos.left};top:${pos.top};">${bikeIcon}</div>
+                      </div>
+
+                      <div class="status-box">
+                        <div class="status-title">${messages[progress] || 'Order confirmed'}</div>
+                        <div class="eta">${etas[progress] || '~30 min'}</div>
+
+                        <div class="progress-steps">
+                          ${[1,2,3,4].map(num => `
+                            <div class="step ${progress >= num ? 'active' : ''}">
+                              <div class="step-circle">${num}</div>
+                              <div class="step-label">${['Prepared','Picked','On Way','Delivered'][num-1]}</div>
+                            </div>
+                          `).join('')}
+                        </div>
+                      </div>
+                    </div>
+                    ` : ''}
+                  </div>
+                `;
+            }).join('');
+        }
+
+        function toggleTracking(btn) {
+            const section = btn.nextElementSibling;
+            if (section && section.classList.contains('tracking-section')) {
+                section.classList.toggle('active');
+            }
+        }
+    </script>
 </body>
 </html>
