--- a/gcart.html
+++ b/gcart.html
@@ -5,57 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Cart — ChatPoint</title>
     <style>
-        body { 
-            font-family: Arial, sans-serif; 
-            background:#f8f8f8; 
-            margin:0; 
-            padding:0; 
+        body {
+            font-family: Arial, sans-serif;
+            background:#f8f8f8;
+            margin:0;
+            padding:0;
         }
-        .header { 
-            position:sticky; top:0; background:white; padding:15px; 
-            box-shadow:0 2px 10px rgba(0,0,0,0.1); display:flex; align-items:center; gap:15px; z-index:10; 
+        .header {
+            position:sticky; top:0; background:white; padding:15px;
+            box-shadow:0 2px 10px rgba(0,0,0,0.1); display:flex; align-items:center; gap:15px; z-index:10;
         }
         .back { font-size:28px; cursor:pointer; color:#4CAF50; }
         .title { font-size:20px; font-weight:bold; flex:1; }
         .container { padding:20px; max-width:600px; margin:0 auto; }
         .cart-items { display:grid; gap:16px; margin-bottom:20px; }
-        .cart-item { 
-            background:white; border-radius:12px; padding:16px; 
-            display:flex; align-items:center; gap:16px; 
-            box-shadow:0 4px 10px rgba(0,0,0,0.08); 
+        .cart-item {
+            background:white; border-radius:12px; padding:16px;
+            display:flex; align-items:center; gap:16px;
+            box-shadow:0 4px 10px rgba(0,0,0,0.08);
         }
-        .cart-item img { 
-            width:80px; height:80px; object-fit:cover; border-radius:10px; 
+        .cart-item img {
+            width:80px; height:80px; object-fit:cover; border-radius:10px;
         }
         .item-details { flex:1; }
         .item-name { font-weight:600; font-size:16px; margin-bottom:4px; }
         .item-price { color:#4CAF50; font-weight:bold; font-size:16px; }
-        .quantity-controls { 
-            display:flex; align-items:center; gap:12px; margin-top:8px; 
+        .quantity-controls {
+            display:flex; align-items:center; gap:12px; margin-top:8px;
         }
-        .qty-btn { 
-            width:32px; height:32px; background:#eee; border:none; 
-            border-radius:50%; font-size:18px; cursor:pointer; 
+        .qty-btn {
+            width:32px; height:32px; background:#eee; border:none;
+            border-radius:50%; font-size:18px; cursor:pointer;
         }
         .qty-btn:hover { background:#ddd; }
         .quantity { font-size:16px; min-width:30px; text-align:center; }
-        .remove-btn { 
-            color:#f44336; font-size:20px; cursor:pointer; 
+        .remove-btn {
+            color:#f44336; font-size:20px; cursor:pointer;
         }
-        .total-section { 
-            background:white; padding:20px; border-radius:12px; 
-            box-shadow:0 4px 10px rgba(0,0,0,0.08); margin-bottom:20px; 
+        .total-section {
+            background:white; padding:20px; border-radius:12px;
+            box-shadow:0 4px 10px rgba(0,0,0,0.08); margin-bottom:20px;
         }
-        .total-row { 
-            display:flex; justify-content:space-between; font-size:16px; margin-bottom:12px; 
+        .total-row {
+            display:flex; justify-content:space-between; font-size:16px; margin-bottom:12px;
         }
-        .grand-total { 
-            font-size:20px; font-weight:bold; color:#4CAF50; 
+        .grand-total {
+            font-size:20px; font-weight:bold; color:#4CAF50;
         }
-        .checkout-btn { 
-            width:100%; background:#4CAF50; color:white; border:none; 
-            padding:16px; font-size:18px; font-weight:bold; border-radius:12px; 
-            cursor:pointer; box-shadow:0 4px 15px rgba(76,175,80,0.3); 
+        .checkout-form {
+            background:white; padding:20px; border-radius:12px;
+            box-shadow:0 4px 10px rgba(0,0,0,0.08);
+        }
+        .checkout-form input, .checkout-form textarea {
+            width:100%; padding:14px; margin:10px 0; border:1px solid #ddd; border-radius:8px; font-size:16px;
+        }
+        .checkout-btn {
+            width:100%; background:#4CAF50; color:white; border:none;
+            padding:16px; font-size:18px; font-weight:bold; border-radius:12px;
+            cursor:pointer; box-shadow:0 4px 15px rgba(76,175,80,0.3);
+            margin-top:10px;
         }
         .checkout-btn:hover { background:#43a047; }
         .checkout-btn:disabled {
@@ -64,11 +72,11 @@
         .min-order-note {
             font-size:14px; color:#e74c3c; text-align:center; margin:10px 0;
         }
-        .empty-cart { 
-            text-align:center; padding:60px 20px; color:#888; font-size:18px; 
+        .empty-cart {
+            text-align:center; padding:60px 20px; color:#888; font-size:18px;
         }
-        .empty-cart a { 
-            color:#4CAF50; text-decoration:none; font-weight:bold; 
+        .empty-cart a {
+            color:#4CAF50; text-decoration:none; font-weight:bold;
         }
         .login-required {
             text-align:center; padding:60px 20px; color:#e74c3c; font-size:18px;
@@ -83,21 +91,18 @@
         <div class="back" onclick="history.back()">←</div>
         <div class="title">My Cart</div>
     </div>
-
     <div class="container">
-        <!-- This will show if not logged in -->
+        <!-- Login Required -->
         <div id="loginRequired" class="login-required" style="display:none;">
             <p>You need to login to view your cart</p>
             <p><a href="login.html">Login Now →</a></p>
         </div>
 
-        <!-- Normal cart content -->
+        <!-- Cart Content -->
         <div id="cartContent">
-            <div id="cartItems" class="cart-items">
-                <!-- Items injected by JS -->
-            </div>
+            <div id="cartItems" class="cart-items"></div>
 
-            <div id="emptyCart" class="empty-cart">
+            <div id="emptyCart" class="empty-cart" style="display:none;">
                 <p>Your cart is empty</p>
                 <p><a href="index.html">Continue Shopping →</a></p>
             </div>
@@ -108,21 +113,26 @@
                     <span id="subtotal">₹0</span>
                 </div>
                 <div class="total-row">
-                    <span>Delivery Charge </span>
+                    <span>Delivery Charge (10%)</span>
                     <span id="deliveryCharge">₹0</span>
                 </div>
                 <div class="total-row grand-total">
                     <span>Grand Total</span>
                     <span id="grandTotal">₹0</span>
                 </div>
-
                 <div class="min-order-note" id="minOrderNote">
-                    Minimum order value is ₹300 to proceed
+                    Add more items to reach minimum order
                 </div>
 
-                <button class="checkout-btn" id="checkoutBtn" onclick="proceedToCheckout()" disabled>
-                    Proceed to Payment
-                </button>
+                <!-- Checkout Form -->
+                <div class="checkout-form">
+                    <input type="text" id="name" placeholder="Your Full Name" required>
+                    <input type="tel" id="phone" placeholder="Phone Number" required>
+                    <textarea id="address" placeholder="Full Delivery Address" rows="3" required></textarea>
+                    <button class="checkout-btn" id="checkoutBtn" onclick="placeOrder()" disabled>
+                        Place Order
+                    </button>
+                </div>
             </div>
         </div>
     </div>
@@ -132,13 +142,13 @@
         let cart = JSON.parse(localStorage.getItem('cart') || '[]');
         const user = JSON.parse(localStorage.getItem('chatpoint_user') || null);
 
-        // === Check if user is logged in ===
         if (!user) {
             document.getElementById('cartContent').style.display = 'none';
             document.getElementById('loginRequired').style.display = 'block';
-            document.title = "Login Required — ChatPoint";
         } else {
-            // User is logged in — show cart
+            // Pre-fill name and phone
+            document.getElementById('name').value = user.name || '';
+            document.getElementById('phone').value = user.phone || '';
             renderCart();
         }
 
@@ -185,7 +195,7 @@
         }
 
         function removeItem(index) {
-            if (confirm("Remove this item from cart?")) {
+            if (confirm("Remove this item?")) {
                 cart.splice(index, 1);
                 localStorage.setItem('cart', JSON.stringify(cart));
                 renderCart();
@@ -194,7 +204,7 @@
 
         function calculateTotal() {
             const subtotal = cart.reduce((sum, item) => sum + (item.price * item.qty), 0);
-            const deliveryCharge = Math.round(subtotal * 0.10); // 10%
+            const deliveryCharge = Math.round(subtotal * 0.10);
             const grandTotal = subtotal + deliveryCharge;
 
             document.getElementById('subtotal').textContent = `₹${subtotal}`;
@@ -210,21 +220,71 @@
             } else {
                 checkoutBtn.disabled = true;
                 minOrderNote.style.display = 'block';
-                minOrderNote.innerHTML = `Add ₹${MIN_ORDER - subtotal} more to reach minimum order of ₹${MIN_ORDER}`;
+                minOrderNote.textContent = `Add ₹${MIN_ORDER - subtotal} more to reach minimum ₹${MIN_ORDER}`;
             }
         }
 
-        function proceedToCheckout() {
-            if (cart.length === 0) {
-                alert("Your cart is empty!");
+        // CRITICAL: Place order with userId
+        async function placeOrder() {
+            const name = document.getElementById('name').value.trim();
+            const phone = document.getElementById('phone').value.trim();
+            const address = document.getElementById('address').value.trim();
+
+            if (!name || !phone || !address) {
+                alert("Please fill all fields");
                 return;
             }
-            const subtotal = cart.reduce((sum, item) => sum + (item.price * item.qty), 0);
+
+            const subtotal = cart.reduce((sum, item) => sum + item.price * item.qty, 0);
             if (subtotal < MIN_ORDER) {
-                alert(`Minimum order value is ₹${MIN_ORDER}`);
+                alert(`Minimum order is ₹${MIN_ORDER}`);
                 return;
             }
-            window.location.href = 'gpay.html'; // Your payment page
+
+            // Build cart structure for server
+            const cartObj = { "ChatPoint": {} };
+            cart.forEach(item => {
+                cartObj["ChatPoint"][item.name] = {
+                    price: item.price,
+                    qty: item.qty
+                };
+            });
+
+            const body = {
+                name,
+                phone,
+                address1: address,
+                grandTotal: subtotal + Math.round(subtotal * 0.10),
+                cart: cartObj,
+
+                // THIS IS THE FIX — sends userId so tracking works
+                userId: user ? user._id : null,
+                customer_name: user ? user.name : name,
+                customer_phone: user ? user.phone : phone
+            };
+
+            try {
+                const res = await fetch("/api/order", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify(body)
+                });
+
+                const data = await res.json();
+
+                if (data.success) {
+                    alert("Order placed successfully!");
+                    localStorage.removeItem('cart');
+                    cart = [];
+                    renderCart();
+                    window.location.href = 'tracking.html';
+                } else {
+                    alert("Order failed: " + (data.message || "Try again"));
+                }
+            } catch (err) {
+                console.error(err);
+                alert("Network error. Check connection.");
+            }
         }
     </script>
 </body>
